# Web_Programming

./: README.md
Labs/Week_2/task_cli/: Cargo.toml
Labs/Week_3/rust_web_server/: Cargo.toml
Labs/Week_4/lab04/: Cargo.toml
Labs/Week_5/actix_sqlite_lab/: .env  Cargo.toml  schema.sql  tasks.db
Labs/Week_5/actix_sqlite_lab/src/: db.rs  lab05_q1.rs  lab05_q2.rs  lab05_q3.rs  main.rs
Labs/Week_6/template_engine/: Cargo.toml
Labs/Week_7/csc1106-rust-practice-01-bank-main/: Cargo.toml
Labs/Week_7/csc1106-rust-practice-02-flight-control-main/: Cargo.toml
Labs/Week_7/practice01/: Cargo.toml
Quiz/g22_practical/: Cargo.toml
Quiz/g22_practical/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  state.rs
Quiz/g22_practical/src/routes/: assign.rs  bugs.rs
Quiz/g22_quiz/: .env  Cargo.toml  README.txt  bugs.db  commands.txt  cookies.txt
Quiz/g22_quiz/migrations/: 001_create_tables.sql
Quiz/g22_quiz/outbox/: 00db31a1-5c5a-44d0-bc19-506ee45c7e92.eml  00ea98fd-1c68-4047-b4b1-e67060a6cb65.eml  026347b4-cfbd-483b-9f95-e3febb33ae00.eml  244edcd7-afd3-48cc-853d-53c814e97bfe.eml  34742a72-9619-4a4f-9026-c184968c4a24.eml  378bf583-8776-40da-ab8b-bd3392c63e39.eml  392a891d-21e0-430b-a334-e11fc765b4bf.eml  39dcc08d-f913-44e7-8c70-ef45d297dcc8.eml  3e24d6b5-1146-4e19-88f6-01ddfa09319d.eml  4f3ea1c4-fb2c-4a2d-ad0b-27267272fbc4.eml  5b8fd3e0-49fd-4083-98d1-e873ecd5fa3d.eml  78a2de72-97e2-45f1-91e4-45dcc3686613.eml  7b9331f6-0663-4904-aeb1-1788d0add2e0.eml  7c56d207-e07a-4880-9418-727d7a3a378e.eml  979a15a6-11e4-4fec-92be-ddfa511effc6.eml  a1ad9b48-a5b1-460f-94e3-141288714e96.eml  a53bafdf-ce29-44ee-89c6-a16bd7017e5d.eml  a66076dd-db39-46ed-b5e5-457dfe0b9f33.eml  a8db9975-e41d-439d-a984-b3840bc8b1e6.eml  b79cd04f-e724-41d2-aa23-25d4b0274a1f.eml  b7f79295-60e8-4fc6-b122-b8c4a04844fb.eml  bff4f1df-86de-4dab-b67d-a3e1b4e947bd.eml  c0da11fe-e465-46fb-a509-d7a17a89e430.eml  c2cd855e-85c0-4f5c-9915-a963285dd12e.eml  c4cbff16-d53f-4bad-b078-061e03818735.eml  dbd8f0db-01ed-41ca-a443-b13c8bf4c14d.eml  ec83723a-1261-44be-adb1-286d84931383.eml  ffa32c8b-3a5a-4832-aefd-4fbdcf6c4a86.eml
Quiz/g22_quiz/src/: email.rs  main.rs  models.rs  state.rs
Quiz/g22_quiz/src/routes/: assign.rs  auth.rs  bugs.rs  projects.rs
Quiz/g22_quiz/templates/: assign_form.html  bug_detail.html  bugs_list.html  confirm.html  home.html  login.html  project_form.html  projects_list.html
Quiz/submission_practical/: Cargo.toml
Quiz/submission_practical/src/: auth.rs  error.rs  main.rs
(+31 files in other folders)
