[package]
name = "g22_practical"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "uuid", "chrono"] }
tera = "1.19"
bcrypt = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9.3.1"
dotenvy = "0.15"
actix-session = { version = "0.7", features = ["cookie-session"] }
