[package]
name = "g22_quiz"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tera = "1.17"
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10"
bcrypt = "0.14"
uuid = { version = "1", features = ["v4", "serde"] }
actix-session = { version = "0.7", features = ["cookie-session"] }


[dependencies.lettre]
version = "0.10.0-rc.4"
default-features = false
features = ["tokio1-native-tls", "builder", "file-transport"]
