[package]
name = "school_it_department"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
derive_more = "0.99"
easy_salt = "0.3.0"
